--- a/infra/compose-prod/docker-compose.yaml
+++ b/infra/compose-prod/docker-compose.yaml
@@ -8,8 +8,8 @@ services:
     container_name: frontend_prod
     ports:
       - "8080:80"
-    environment:
-      REACT_APP_API_BASE_URL: "${REACT_APP_API_BASE_URL}"
+    env_file:
+    - .env 
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/"]
