--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -34,6 +34,16 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Connection '';
+            proxy_http_version 1.1;
+
+            # Configuraciones específicas para SSE (Server-Sent Events)
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 86400s;
+            proxy_connect_timeout 86400s;
+            proxy_send_timeout 86400s;
+            chunked_transfer_encoding on;
 
             # CORS headers
             add_header 'Access-Control-Allow-Origin' '*' always;
