eliminado voto en timer real

--- a/front/rupu-central/nginx.conf
+++ b/front/rupu-central/nginx.conf
@@ -27,82 +27,42 @@ http {
         # Evitar que nginx busque archivos estáticos por defecto
         root /dev/null;
 
-        # Ruta específica SOLO para Server-Sent Events (SSE) - endpoint /stream (ADMIN)
-        # Usar regex con ^ para máxima especificidad y prioridad
+        # Ruta específica SOLO para Server-Sent Events (SSE) - endpoint /stream
         location ~ ^/api/v1/horizontal-properties/[0-9]+/voting-groups/[0-9]+/votings/[0-9]+/stream$ {
             proxy_pass http://central_reserve:3050;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
             
-            # Configuración CRÍTICA para SSE
+            # Configuración específica para SSE
             proxy_buffering off;
             proxy_cache off;
-            proxy_request_buffering off;
-            proxy_max_temp_file_size 0;
-            
-            # Timeouts extendidos para conexiones persistentes
-            proxy_read_timeout 86400s;
+            proxy_read_timeout 24h;
             proxy_connect_timeout 60s;
-            proxy_send_timeout 86400s;
-            
-            # HTTP/1.1 para conexiones persistentes
+            proxy_send_timeout 24h;
             proxy_http_version 1.1;
             proxy_set_header Connection '';
-            
-            # Deshabilitar chunked encoding para SSE
             chunked_transfer_encoding off;
             
-            # Headers específicos para SSE
+            # Headers para SSE
             proxy_set_header Accept text/event-stream;
             proxy_set_header Cache-Control no-cache;
-            proxy_set_header X-Accel-Buffering no;
             
-            # Headers de respuesta SSE (SIN CORS - el backend ya los envía)
-            add_header 'X-Accel-Buffering' 'no' always;
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
 
-            # OPTIONS manejado por el backend - no agregar headers CORS aquí
-        }
-
-        # Ruta específica SOLO para Server-Sent Events (SSE) - endpoint /voting-stream (PÚBLICO)
-        # Usar regex con ^ para máxima especificidad y prioridad
-        location ~ ^/api/v1/public/voting-stream$ {
-            proxy_pass http://central_reserve:3050;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            
-            # Configuración CRÍTICA para SSE
-            proxy_buffering off;
-            proxy_cache off;
-            proxy_request_buffering off;
-            proxy_max_temp_file_size 0;
-            
-            # Timeouts extendidos para conexiones persistentes
-            proxy_read_timeout 86400s;
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 86400s;
-            
-            # HTTP/1.1 para conexiones persistentes
-            proxy_http_version 1.1;
-            proxy_set_header Connection '';
-            
-            # Deshabilitar chunked encoding para SSE
-            chunked_transfer_encoding off;
-            
-            # Headers específicos para SSE
-            proxy_set_header Accept text/event-stream;
-            proxy_set_header Cache-Control no-cache;
-            proxy_set_header X-Accel-Buffering no;
-            
-            # Headers de respuesta SSE (SIN CORS - el backend ya los envía)
-            add_header 'X-Accel-Buffering' 'no' always;
-
-            # OPTIONS manejado por el backend - no agregar headers CORS aquí
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
         }
 
         # API Backend - proxy al contenedor central_reserve (para otros endpoints)
@@ -112,6 +72,20 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Configuraciones específicas para SSE (Server-Sent Events)
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 24h;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 24h;
+            proxy_http_version 1.1;
+            proxy_set_header Connection '';
+            chunked_transfer_encoding off;
+            
+            # Headers adicionales para SSE
+            proxy_set_header Accept text/event-stream;
+            proxy_set_header Cache-Control no-cache;
 
             # CORS headers
             add_header 'Access-Control-Allow-Origin' '*' always;
