--- a/mobile/rupu/pubspec.yaml
+++ b/mobile/rupu/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path: ^1.9.0
   image: ^4.2.0
   image_picker: ^1.0.7
+  flex_color_picker: ^3.7.1
 
 dev_dependencies:
   flutter_test:
